--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,21 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 # taken from https://github.com/github/gitignore/blob/master/Global/JetBrains.gitignore
+# also used https://medium.com/@petehouston/typical-gitignore-for-a-gradle-java-project-52cbe079a99c
+
+### Java ###
+*.class
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
 
 # User-specific stuff
 .idea/**/workspace.xml
@@ -24,6 +39,17 @@
 # Gradle
 .idea/**/gradle.xml
 .idea/**/libraries
+.gradle
+/build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecach
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
