--- a/gradle/build.gradle
+++ b/gradle/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.3.11'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compileOnly 'org.projectlombok:lombok:1.18.8'
+    compile group: 'org.apache.commons', name: 'commons-email', version: '1.4'
 }
 
 compileKotlin {
